<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FormClientActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/txtDescricaoProduto"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="244dp"
            android:ems="10"
            android:hint="@string/str_nome"
            android:padding="10dp"
            android:background="@drawable/input_background"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtCelularCliente"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:background="@drawable/input_background"
            android:hint="@string/str_celular"
            android:inputType="phone"
            android:minHeight="48dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDescricaoProduto" />

        <EditText
            android:id="@+id/txtApelidoCliente"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/input_background"
            android:ems="10"
            android:hint="@string/str_apelido"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCpf"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnSalvarProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="84dp"
            android:layout_marginEnd="90dp"
            android:background="@drawable/button_background"
            android:text="@string/str_btn_cadastrar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtApelidoCliente"
            app:layout_constraintVertical_bias="0.07" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_cadastro_clientes"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txtDescricaoProduto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtCpf"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/str_hint_cpf"
            android:inputType="textPersonName"
            android:background="@drawable/input_background"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCelularCliente" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>