<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <Button
        android:id="@+id/btn_clientes"
        android:layout_width="170dp"
        android:layout_height="80dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="216dp"
        android:text="@string/str_clientes"
        app:layout_constraintEnd_toStartOf="@+id/btn_produtos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_produtos"
        android:layout_width="170dp"
        android:layout_height="80dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="100dp"
        android:text="@string/str_produtos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_clientes"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_vendas"
        android:layout_width="170dp"
        android:layout_height="80dp"
        android:layout_marginTop="12dp"
        android:text="@string/str_vendas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.279"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_clientes"
        app:layout_constraintVertical_bias="0.01" />

</androidx.constraintlayout.widget.ConstraintLayout>