<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FormProdutoActivity">

        <EditText
            android:id="@+id/txtDescricaoProduto"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="244dp"
            android:ems="10"
            android:hint="@string/str_hint_descricao"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="10dp"
            android:background="@drawable/input_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtPrecoCusto"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/str_hint_preco_custo"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:padding="10dp"
        android:background="@drawable/input_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescricaoProduto"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnSalvarProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/button_background"
        android:text="@string/str_btn_cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.671" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_cadastro_de_produtos"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtDescricaoProduto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.661" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtValorProduto"
        app:layout_constraintVertical_bias="0.014" />

    <EditText
        android:id="@+id/txtValorProduto"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/str_hint_valor"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:padding="10dp"
        android:background="@drawable/input_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrecoCusto" />

</androidx.constraintlayout.widget.ConstraintLayout>