<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_view_id"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:padding="15dp"
                    android:text="@string/txt_id_5"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txt_view_apelido"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:padding="15dp"
                    android:layout_toEndOf="@+id/txt_view_id"
                    android:text="@string/apelido_teste_de_teste"
                    android:textAlignment="textStart"
                    android:textSize="12sp" />


                <TextView
                    android:id="@+id/txt_view_apelido2"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_toEndOf="@+id/txt_view_apelido"
                    android:padding="15dp"
                    android:text="@string/cpf_teste"
                    android:textAlignment="textStart"
                    android:textSize="12sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_view_nome"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:padding="15dp"
                    android:text="@string/nome_teste_de_teste"
                    android:textAlignment="textEnd"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_toEndOf="@+id/txt_view_nome"
                    android:background="@drawable/ic_baseline_edit_24" />

            </RelativeLayout>
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>